--- a/jee-logging-api/pom.xml
+++ b/jee-logging-api/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>de.etecture.opensource</groupId>
 		<artifactId>jee-logging</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>jee-logging-api</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>ejb</packaging>
 
 	<name>Java EE Logging API</name>
