--- a/jee-logging-sysout-bridge/pom.xml
+++ b/jee-logging-sysout-bridge/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>de.etecture.opensource</groupId>
 		<artifactId>jee-logging</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 
 	<artifactId>jee-logging-sysout-bridge</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<packaging>ejb</packaging>
 
 	<name>Java EE Logging - System.out Bridge</name>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>de.etecture.opensource</groupId>
 			<artifactId>jee-logging-api</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax</groupId>
